traefik_apim/resources/3-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-ociapi
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /ociapi
      - /oci-portal
