traefik_apim/resources/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oci-svc
  namespace: apps
spec:
  type: ExternalName
  externalName: ${EXTERNAL_NAME}
  ports:
    - port: 443
