traefik_apim/resources/7-portal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oci-portal-route
  namespace: apps
  annotations:
    hub.traefik.io/api-portal: oci-portal@apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/oci-portal`)
      kind: Rule
      middlewares:
      - name: stripprefix-ociapi
        namespace: apps
      services:
        - name: apiportal
          namespace: traefik
          port: 9903
